@@ -1,3 +1,9 @@
+2004-03-31  Yuya Nishida  <yuya@j96.org>
+
+	* w3m-search.el (w3m-search-engine-alist): Add "amazon-ja" entry;
+	"PostData" can be specified.
+	(w3m-search): Support post-data.
+
 2004-04-04  ARISAWA Akihiro  <ari@mbf.sphere.ne.jp>
 
 	* w3m.el (w3m-header-arguments): Set unibyte at work buffer.
